After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688151 - pbutils missing description for Opus codec
pbutils missing description for Opus codec
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.x
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-12 09:56 UTC by Christian Fredrik Kalager Schaller
Modified: 2012-11-12 12:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Fredrik Kalager Schaller 2012-11-12 09:56:38 UTC
pbutils missing human readable description for Opus codec
Comment 1 Tim-Philipp Müller 2012-11-12 12:58:52 UTC
commit 2ea57f30d698c9aac401dade1df650797dd59c5f
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Mon Nov 12 12:57:35 2012 +0000

    pbutils: add description for Opus audio codec
    
    https://bugzilla.gnome.org/show_bug.cgi?id=688151