pbutils: add description for Opus audio codec

https://bugzilla.gnome.org/show_bug.cgi?id=688151